# RustAudioProgramming

./: .gitignore  Cargo.toml
RustAudioProgramming/jesse_scratch/: Cargo.toml
RustAudioProgramming/jesse_scratch/a001_gen_tut/: Cargo.toml
RustAudioProgramming/jesse_scratch/a001_gen_tut/src/: main.rs
RustAudioProgramming/jesse_scratch/a002_packages_n_modules/: Cargo.toml
RustAudioProgramming/jesse_scratch/a002_packages_n_modules/src/: main.rs
RustAudioProgramming/jesse_scratch/a002_packages_n_modules/src/restaurant/: mod.rs
RustAudioProgramming/jesse_scratch/a003_read_write_files/: Cargo.toml  lines.txt
RustAudioProgramming/jesse_scratch/a003_read_write_files/src/: main.rs
RustAudioProgramming/jesse_scratch/a004_iterators/: Cargo.toml
RustAudioProgramming/jesse_scratch/a004_iterators/src/: main.rs
RustAudioProgramming/jesse_scratch/a005_closures/: Cargo.toml
RustAudioProgramming/jesse_scratch/a005_closures/src/: main.rs
RustAudioProgramming/jesse_scratch/a006_smart_pointers/: Cargo.toml
RustAudioProgramming/jesse_scratch/a006_smart_pointers/src/: main.rs
RustAudioProgramming/jesse_scratch/a007_concurrency/: Cargo.toml
RustAudioProgramming/jesse_scratch/a007_concurrency/src/: main.rs
RustAudioProgramming/jesse_scratch/src/: main.rs
RustAudioProgramming/rust_examples/001_forloop/for_loop/src/: main.rs
RustAudioProgramming/rust_examples/002_whileloop/while_loop/src/: main.rs
RustAudioProgramming/tim_scratch/: Cargo.toml
RustAudioProgramming/tim_scratch/src/: main.rs
