[package]
name = "tim_scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
cpal = "0.14.2"
criterion = "0.4.0"
duplicate = "0.4.1"
dyn-clone = "1.0.10"
fundsp = "0.12.0"
funutd = "0.11.0"
generic-array = "0.14.6"
lazy_static = "1.4.0"
midi-msg = "0.4.0"
midir = "0.8.0"
num-complex = "0.4.3"
numeric-array = "0.5.2"
plotters = "0.3.4"
read_input = "0.8.6"
rsor = "0.1.3"
rustfft = "6.1.0"
symphonia = "0.5.2"
thingbuf = "0.1.3"
tinyvec = "1.6.0"
